# prism

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/Modules/: FindExternalLib.cmake
src/: app.c  app.h  main.c  platform.c  platform.h
